--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -1,5 +1,5 @@
 <html>
     <body>  
-          <h1> Hello world </h1>
+          <h1> <a href=''>{{feature.name}} </a></h1>
     </body>
     </html>
